starts looking like Chirper

--- a/server/src/main/twirl/views/index.scala.html
+++ b/server/src/main/twirl/views/index.scala.html
@@ -8,8 +8,11 @@
         <meta charset="UTF-8">
         <title>@title</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-        <link rel="stylesheet" media="screen" href=@_asset("stylesheets/main.min.css") >
+        <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href=@_asset("lib/normalize.css/normalize.css") >
+        <link rel="stylesheet" href=@_asset("lib/foundation/css/foundation.min.css") >
         <link rel="shortcut icon" type="image/png" href=@_asset("images/favicon.png") >
+        <link rel="stylesheet" media="screen" href=@_asset("stylesheets/main.css") >
     </head>
     <body>
         <div id="root">
